@@ -1,3 +1,4 @@
+2016-01-19 Fixed issue with Source List and Text gaps in Text module
 2016-01-18 Fixed issue with double ShowAnswers execution in Multiplegap module
 2016-01-18 Added new module Print Report
 2016-01-18 Fixed test in LearnPen Report module
